+ Aviod OOM in SnappySparkLogAggregator due to insufficient PermGen